  this may yield different results on filesystems that support
  symbolic links.

* The output generated by the xml formatter for <junit> has changed
  again, it doesn't format the numeric value in the time attribute anymore.

* Pattern matching rules have changes slightly, the pattern foo*
  doesn't match files contained in a directory named foo - use foo/*
  instead.

Other changes:
--------------

* New tasks: ear, p4counter, record, cvspass, vsscheckin, vsscheckout,
  typedef, sleep, mimemail, set of tasks for Continuus/Synergy, dependset

* Ant now uses JAXP 1.1

* rmic now supports Kaffe's and Weblogic's version of rmic.

* new magic property build.rmic to chose the rmic implementation

* <tar> will now add empty directories as well

* you can now specify a description for <p4change>

* <touch> can now work on <fileset>s

* <uptodate> now supports a value attribute

* <fail> supports nested text

* <fixcrlf> won't override files that are already in the correct
   format.

* <sql> now supports REM comments as well as // and --

* <jar> now has a nested <metainf> element following the same idea as
  <war>'s <webinf>.

* <pvcs> can now handle multiple projects.

* <available> now has a "type" attribute you can use in conjunction
  with the "file" attribute to specify whether the "file" you're
  looking for is a file or a directory.

* New <junit> formatter named "brief"

* Add support for Borland Application Server to the <ejbjar> task using
  a <borland> nested element.
  
* Add support for iPlanet Application Server to the <ejbjar> task. Also 
  includes some iPlanet utility tasks
  
* Add support for JBoss Application Server to the <ejbjar> task. 

* Add a naming attribute to <ejbjar> to control the naming scheme that
  ejbjar uses to name the generated EJB jars.
  
* Allow the SQL Delimiter to be set in the so that Oracle stored procs may be
  entered  

* <execon> and <apply> can now optionally skip empty filesets.
